# InSpIRe

./: README.md  pyproject.toml  requirements.txt
example_data_set/benchmarking_example_ID5a_Rec1/: 1656_unprocessed_co-reg_ID5a.npy  HotSpotMap_cohortwide_tumor_1proz_ID5a.npy  annotation_Rec1_ID5a.csv
example_data_set/feature_selection_prior_knowledge/features/: features_tumor.csv
example_data_set/masked_projection_imgs/: maskedProjectionImg_ID18.npy  maskedProjectionImg_ID32.npy  maskedProjectionImg_ID5a.npy
example_data_set/multimodal_correlation/: 1656_unprocessed_co-reg_ID32.npy  HotSpotMap_cohortwide_tumor_1proz_ID32.npy
example_data_set/probability_maps/cohort_wide_mapping/: HotSpotMap_cohortwide_tumor_1proz_ID18.npy
example_data_set/probability_maps/reference_based_mapping/: HotSpotMap_reference_based_tumor_ID25.npy  maskedProjectionImg_ID25.npy
src/inspire/: __init__.py  _coregistration_workflow.py  benchmarking.py  cohort_wide_mapping.py  correlative_multimodal_integration.py  preprocessing_infra_data.py  reference_based_mapping.py
